@@ -1,6 +1,6 @@
 # EuclidGeometry
 
-The change log has been moved to changelog.txt
+DON'T FORGET TO GENERATE YOUR HTML FILE!
 
 To create new levels: make a copy of BasicObjects.js and ElucidGameJS.html, save as level--.js and level--.html and complete the listed TODO's
 
@@ -10,11 +10,11 @@ Level 0
 
 Working on:
 
-Emily: Level 1
-John: 
-Justin: 
-Max: 
+Emily: 		Level 1
+John: 		Level 3
+Justin: 	Level 2
+Max: 		Stylesheet
 
 Remaining:
 
-levels 2-20
+levels 4, 5, 6, 7, 8, 9, 10, 11, 12 ...
