@@ -5,3 +5,5 @@ Changelog:
 12/9: Still under code freeze. Emily is working on new method for verifying levels. New functionality: switching between levels
 
 12/9 -2: Emily has BasicObjects and ElucidGameJS ready for making levels. Ends the code freeze. Make sure TODO's are completed in both files when you make the copy
+
+12/12: Levels assigned. Emily nearly done with level 1. John created code for level 3. Justin assigned level 2. Max almost done with stylesheet
